<resources>

    <string name="app_name">Android Dissected</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="choose_item">Choose an item</string>
    <string name="placeholder">Value</string>
    <string name="share">Share</string>
    <string name="loren_ipsum">Some sample text to show what this could look like with a review here. 
        \n Blah Blah Blah. ADDITS is pretty cool. But the1dynasty is the best!
        \n Grab my new app below. Just kidding. there are no links here :P</string>

    <!-- Dummy Text -->
    <string name="dummy_desc">Some sample text to show what this could look like with a review here. 
        \n Blah Blah Blah. ADDITS is pretty cool. But the1dynasty is the best!
        \n Grab my new app below. Just kidding. there are no links here :P</string>
    <string name="dummy_title">Some sample text to show what this could look like with a review here. Blah Blah Blah.</string>
    <string name="dummy_author">the1dynasty</string>
    <string name="dummy_date">May 5, 8:55PM</string>
    <string name="dummy_comments">Load Comments</string>
    <string name="dummy_category">Articles</string>
    <string name="get_it_on_google_play">Get it on Google Play</string>
    <string name="widget_stack">ADDITS Stack</string>
    <string name="widget_article">ADDITS Article</string>
    <string name="widget_list">ADDITS List</string>
    <string name="close">Close</string>
    <string name="note">NOTE</string>
    <string name="changelog_note"><![CDATA[If you are experiencing any issues with this app, please <a href="mailto:support@pkmmte.com">contact support</a> so we can fix your problem and earn a 5-star rating!]]></string>
    <string name="loading">Loading...</string>
    <string name="daydream_name">Android Dissected</string>

    <!-- Pull To Refresh -->
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    
    <string name="article_update_service">Article Update Service</string>

</resources>