<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="@drawable/transparent_selector" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/Image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/placeholder"
            android:scaleType="centerCrop"
            android:src="@drawable/loading_image_banner" />

        <LinearLayout
            android:id="@+id/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/addits_gray_dark"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="serif"
                android:maxLines="2"
                android:text="@string/dummy_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_med" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium" >

                <TextView
                    android:id="@+id/txtAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="serif"
                    android:text="@string/dummy_author"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_secondary" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:fontFamily="serif"
                    android:text="@string/dummy_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_secondary" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>