<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    tools:ignore="UselessParent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:background="@drawable/card_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thick"
            android:background="@color/black_light"
            android:orientation="horizontal" >

            <View
                android:id="@+id/lblUnread"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/holo_orange_dark" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/transparent_selector" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@color/addits_green" >

                        <TextView
                            android:id="@+id/txtCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="@dimen/margin_small"
                            android:text="@string/dummy_category"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_primary" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="serif"
                        android:padding="@dimen/margin_medium"
                        android:text="@string/dummy_date"
                        android:textSize="@dimen/text_secondary" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:maxLines="2"
                        android:padding="@dimen/margin_medium"
                        android:text="@string/dummy_title"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:fontFamily="serif"
                        android:maxLines="3"
                        android:text="@string/dummy_desc"
                        android:textSize="@dimen/text_primary" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ImageView
                            android:id="@+id/imgPreview"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/feed_image"
                            android:contentDescription="@string/placeholder"
                            android:scaleType="centerCrop"
                            android:src="@drawable/loading_image_banner" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="@drawable/button_black_transparent_selector" >

                            <TextView
                                android:id="@+id/txtAuthor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentLeft="true"
                                android:fontFamily="serif"
                                android:padding="@dimen/margin_medium"
                                android:text="@string/dummy_author"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_secondary" />
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>